# odoo-devkit

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  github-repo-workflow.json  github.json
.github/workflows/: ci.yml
docker/: Dockerfile  artifact.Dockerfile  dependency-evidence.Dockerfile
docker/runtime-python/: pyproject.toml
docker/scripts/: install_openupgradelib_if_needed.sh  odoo_website_bootstrap.py  run_odoo_data_workflows.py  run_odoo_startup.py  run_openupgrade.py
docs/: ARCHITECTURE.md  README.md  roles.md
docs/tooling/: artifact-inputs.md  command-patterns.md  tenant-overlay.md  workspace-cli.md
odoo_devkit/: __init__.py  artifact_inputs.py  artifact_provenance.py  cli.py  dependency_workspace.py  dokploy_api.py  dokploy_config.py  ide_support.py  local_runtime.py  manifest.py  pycharm.py  remote_runtime.py  runtime.py  runtime_environment.py  scaffold.py  workspace.py  workspace_cockpit.py  workspace_contract.py  workspace_surface.py
platform/: stack.toml
platform/compose/: base.yaml
platform/config/: README.md  base.env  odoo.conf
templates/tenant-overlay/: AGENTS.md  artifact-inputs.toml  workspace.toml
tests/: test_artifact_provenance.py  test_compose_contract.py  test_control_plane_cli_contract.py  test_dependency_workspace.py  test_docker_script_override_guards.py  test_ide_support.py  test_odoo_data_workflows.py  test_odoo_startup.py  test_odoo_website_bootstrap.py  test_remote_runtime.py  test_runtime.py  test_runtime_environment_contract.py  test_scaffold.py  test_workspace.py
(+7 files in other folders)
