[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "odoo-devkit"
version = "0.1.0"
description = "Workspace assembly tooling for tenant-focused Odoo development"
requires-python = ">=3.13"
dependencies = [
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["odoo_devkit"]

[project.scripts]
platform = "odoo_devkit.cli:main"

[tool.ruff]
line-length = 133
target-version = "py313"

[tool.ruff.lint]
select = ["ANN", "UP", "B", "I"]
ignore = [
    "D",
    "COM812",
    "ISC001",
    "ANN401",
]
